--- a/OnWave/assets/css/_variables.scss
+++ b/OnWave/assets/css/_variables.scss
@@ -5,7 +5,7 @@ $sliderGradient: linear-gradient(180deg,
 $transition: all 0.2s linear;
 
 // main colors
-$white: #ffffff;
+$white: #f8f1ea;
 $brownLight: #f8f1ea;
 $tomatoLight: #f16a50;
 $tomato: #c62100;
@@ -26,15 +26,7 @@ $desktop: 1400px;
 $res900: 900px;
 $tablet: 768px;
 $res700: 700px;
+$res620: 620px;
+$res580: 580px;
 $res400: 400px;
 $mobile: 320px;
-
-// containers
-// 1400
-// header - 1200
-
-// 768
-// header - 738
-
-// 320
-// header - 300
