--- a/OnWave/assets/css/style.scss
+++ b/OnWave/assets/css/style.scss
@@ -10,3 +10,6 @@
 /* Site styles */
 @import 'stylesheets/header';
 @import 'stylesheets/mainSlider';
+@import 'stylesheets/newSlider';
+@import 'stylesheets/brands';
+@import 'stylesheets/footer';
