--- a/OnWave/assets/css/_mixins.scss
+++ b/OnWave/assets/css/_mixins.scss
@@ -9,6 +9,11 @@
 	font-size: 5rem;
 	line-height: 6.1rem;
 	text-transform: uppercase;
+
+	@media screen and (max-width: $res900) {
+		font-size: 2.6rem;
+		line-height: 3.2rem;
+	}
 }
 
 @mixin h2 {
@@ -16,13 +21,11 @@
 	font-size: 3.2rem;
 	line-height: 3.9rem;
 	text-transform: uppercase;
-}
 
-@mixin h2-768 {
-	@include montserrat($m700);
-	font-size: 2rem;
-	line-height: 2.4rem;
-	text-transform: uppercase;
+	@media screen and (max-width: $res900) {
+		font-size: 2rem;
+		line-height: 2.4rem;
+	}
 }
 
 @mixin prodName {
@@ -37,11 +40,23 @@
 	line-height: 2.9rem;
 }
 
+@mixin badge {
+	@include montserrat($m500);
+	font-size: 1rem;
+	line-height: 1.2rem;
+	text-transform: uppercase;
+}
+
 @mixin buttonText {
 	@include montserrat($m500);
 	font-size: 1.8rem;
 	line-height: 2.2rem;
 	text-transform: uppercase;
+
+	@media screen and (max-width: $res900) {
+		font-size: 1.6rem;
+		line-height: 2rem;
+	}
 }
 
 @mixin menu {
@@ -52,6 +67,28 @@
 	@media screen and (max-width: $res400) {
 		font-size: 1.4rem;
 		line-height: 2rem;
+	}
+}
+
+@mixin footer {
+	@include montserrat($m500);
+	font-size: 2.6rem;
+	line-height: 3.2rem;
+
+	@media screen and (max-width: $tablet) {
+		font-size: 2rem;
+		line-height: 2.4rem;
+	}
+}
+
+@mixin copy {
+	@include montserrat($m500);
+	font-size: 1.4rem;
+	line-height: 1.7rem;
+
+	@media screen and (max-width: $mobile) {
+		font-size: 1.2rem;
+		line-height: 1.5rem;
 	}
 }
 
@@ -69,4 +106,12 @@
 
 	width: 100%;
 	height: 100%;
+}
+
+@mixin sectionPadding {
+	padding: 7rem 0;
+
+	@media screen and (max-width: $tablet) {
+		padding: 5rem 0;
+	}
 }
