--- a/JS__HW__13/assets/css/style.css
+++ b/JS__HW__13/assets/css/style.css
@@ -789,7 +789,330 @@ textarea {
 }
 
 html {
+  font-family: "Roboto", sans-serif;
   font-size: 10px;
+  background-color: #A0B4D2;
+}
+
+.main {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+.main__container {
+  margin-inline: auto;
+  max-width: 80%;
+  width: 100%;
+  height: 100%;
+}
+.main__wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10rem;
+}
+.main__title {
+  font-weight: 400;
+  font-size: 5rem;
+  line-height: 120%;
+  color: #F8F6F9;
+}
+.main__btn-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.main__btn {
+  display: inline-flex;
+  background-color: #D2B6A5;
+  border: 2px solid #8B94B1;
+  box-shadow: 0 0 2rem #8B94B1;
+  border-radius: 1rem;
+  padding: 2rem 5rem;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 120%;
+  text-transform: uppercase;
+  color: #8B94B1;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+.main__btn:hover {
+  box-shadow: 0 0 5rem #F8F6F9;
+  border-color: #F8F6F9;
+  color: #F8F6F9;
+}
+.main__btn:active {
+  box-shadow: 0 0 5rem #638EBB;
+  border-color: #638EBB;
+  color: #638EBB;
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
+  background-color: #D2B6A5;
+}
+.modal__container {
+  margin: 10rem;
+  padding: 2rem;
+  background-color: #A0B4D2;
+  border: 2px solid #638EBB;
+  border-radius: 2rem;
+}
+.modal__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+}
+.modal__btn {
+  display: inline-flex;
+  background-color: #D2B6A5;
+  border: 2px solid #8B94B1;
+  box-shadow: 0 0 2rem #8B94B1;
+  border-radius: 1rem;
+  padding: 2rem 5rem;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 120%;
+  text-transform: uppercase;
+  color: #8B94B1;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+.modal__btn:hover {
+  box-shadow: 0 0 5rem #638EBB;
+  border-color: #638EBB;
+  color: #638EBB;
+}
+.modal__btn:active {
+  box-shadow: 0 0 5rem #F8F6F9;
+  border-color: #F8F6F9;
+  color: #F8F6F9;
+}
+.modal__title {
+  font-weight: 400;
+  font-size: 3rem;
+  line-height: 120%;
+  color: #F8F6F9;
+}
+.modal__descr {
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 120%;
+  color: #F8F6F9;
+  text-align: center;
+}
+.modal__task {
+  width: 100%;
+  height: 100%;
+  background-color: #8B94B1;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 2px solid #638EBB;
+}
+
+.none {
+  display: none;
+}
+
+.first__radius-input {
+  display: flex;
+  gap: 5rem;
+}
+.first__radius-btn {
+  display: inline-flex;
+  background-color: #D2B6A5;
+  border: 2px solid #8B94B1;
+  box-shadow: 0 0 2rem #8B94B1;
+  border-radius: 1rem;
+  padding: 0.5rem 2rem;
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 120%;
+  text-transform: uppercase;
+  color: #8B94B1;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+.first__radius-btn:hover {
+  box-shadow: 0 0 5rem #638EBB;
+  border-color: #638EBB;
+  color: #638EBB;
+}
+.first__radius-btn:active {
+  box-shadow: 0 0 5rem #F8F6F9;
+  border-color: #F8F6F9;
+  color: #F8F6F9;
+}
+.first__area {
+  background-color: unset;
+  border: unset;
+  border-bottom: 2px solid #638EBB;
+  resize: none;
+  width: 100%;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 120%;
+  color: #F8F6F9;
+}
+.first__area::-moz-placeholder {
+  color: #F8F6F9;
+  opacity: 0.7;
+}
+.first__area:-ms-input-placeholder {
+  color: #F8F6F9;
+  opacity: 0.7;
+}
+.first__area::placeholder {
+  color: #F8F6F9;
+  opacity: 0.7;
+}
+.first__results {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 5rem;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 120%;
+  color: #F8F6F9;
+  color: #ee82ee;
+}
+
+.second__title {
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 120%;
+  color: #F8F6F9;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.second__options {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-between;
+  align-items: center;
+}
+.second__rechargeable-title {
+  display: flex;
+  align-items: center;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 120%;
+  color: #F8F6F9;
+}
+.second__rechargeable-option {
+  display: flex;
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  border: 2px solid #F8F6F9;
+  margin-left: 1rem;
+  cursor: pointer;
+}
+.second__rechargeable-option--select {
+  box-shadow: inset 0 0 5px 5px #F8F6F9;
+}
+.second__color-select {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+.second__new-color {
+  border-radius: 5px;
+  width: 3rem;
+  height: 3rem;
+  border: 2px solid #F8F6F9;
+  opacity: 0.3;
+  cursor: pointer;
+}
+.second__new-color:hover {
+  opacity: 1;
+}
+.second__picked-color {
+  opacity: 1;
+  box-shadow: 0 0 1rem #F8F6F9;
+}
+.second__text-area {
+  margin-top: 2rem;
+  background-color: #F8F6F9;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: unset;
+  resize: none;
+  width: 100%;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 120%;
+}
+.second__text-area::-moz-placeholder {
+  color: #8B94B1;
+  opacity: 0.7;
+}
+.second__text-area:-ms-input-placeholder {
+  color: #8B94B1;
+  opacity: 0.7;
+}
+.second__text-area::placeholder {
+  color: #8B94B1;
+  opacity: 0.7;
+}
+.second__text-title {
+  margin-top: 2rem;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 120%;
+  color: #F8F6F9;
+  text-align: center;
+}
+.second__text-output {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+  background-color: #F8F6F9;
+  padding: 1rem;
+  border-radius: 1rem;
+  width: 100%;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 120%;
+}
+.second__text-inform {
+  margin-top: 2rem;
+  background-color: unset;
+  width: 100%;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 120%;
+  color: #F8F6F9;
+}
+
+.third__table {
+  width: 100%;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 120%;
+  color: #F8F6F9;
+  border: 2px solid #F8F6F9;
+  text-transform: uppercase;
+}
+
+th,
+td {
+  padding: 1rem;
+  border: 1px solid #F8F6F9;
+  text-align: center;
+  vertical-align: middle;
 }
 
 /* Site styles *//*# sourceMappingURL=style.css.map */
