--- a/JS__HW__14/assets/css/_general.scss
+++ b/JS__HW__14/assets/css/_general.scss
@@ -442,6 +442,7 @@ td {
     }
 
     &__errors {
+        margin-top: 2rem;
         font-weight: 400;
         font-size: 1.5rem;
         line-height: 120%;
