--- a/JS__HW__14/assets/css/style.css
+++ b/JS__HW__14/assets/css/style.css
@@ -1172,6 +1172,7 @@ td {
   background-color: transparent;
 }
 .second__errors {
+  margin-top: 2rem;
   font-weight: 400;
   font-size: 1.5rem;
   line-height: 120%;
