--- a/JS__HW__13/assets/css/_general.scss
+++ b/JS__HW__13/assets/css/_general.scss
@@ -335,6 +335,7 @@ html {
         font-weight: 400;
         font-size: 1.5rem;
         line-height: 120%;
+        white-space: break-spaces;
     }
 
     &__text-inform {
