--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -963,4 +963,8 @@ html {
   max-height: 64rem;
   width: 100%;
   height: 100%;
+}
+
+.none {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
